[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/double_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Game/Levels/Garage/Garage.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/textures/space.png" type="Texture" id=5]
[ext_resource path="res://UI/textures/left_right.png" type="Texture" id=6]
[ext_resource path="res://UI/textures/e_mouseleft.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
gameScene = ExtResource( 4 )

[node name="Keybinds" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -107.0
margin_right = -12.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Keybinds"]
margin_right = 196.0
margin_bottom = 14.0
text = "Key binds"

[node name="movement" type="HBoxContainer" parent="Keybinds"]
margin_top = 18.0
margin_right = 196.0
margin_bottom = 42.0

[node name="Key" type="TextureRect" parent="Keybinds/movement"]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Keybinds/movement"]
margin_left = 52.0
margin_top = 5.0
margin_right = 156.0
margin_bottom = 19.0
text = "move horizontal"

[node name="interact" type="HBoxContainer" parent="Keybinds"]
margin_top = 46.0
margin_right = 196.0
margin_bottom = 70.0

[node name="Key" type="TextureRect" parent="Keybinds/interact"]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Label2" type="Label" parent="Keybinds/interact"]
margin_left = 52.0
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "interact"

[node name="jump" type="HBoxContainer" parent="Keybinds"]
margin_top = 74.0
margin_right = 196.0
margin_bottom = 98.0

[node name="Key" type="TextureRect" parent="Keybinds/jump"]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Label2" type="Label" parent="Keybinds/jump"]
margin_left = 52.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "jump"

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -88.0
margin_right = 122.0
margin_bottom = -18.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Buttons"]
margin_right = 210.0
margin_bottom = 70.0
rect_min_size = Vector2( 210, 0 )
text = "Play"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_left = 240.0
margin_right = 363.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 50 )
size_flags_horizontal = 12
size_flags_vertical = 12
text = "Credits"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 50.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Bij den psychiater...[/center]"
text = "Bij den psychiater..."
fit_content_height = true

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
